upgrade SB + java